assets/css/style.css
body {
    font-family: 'Arial', sans-serif;
    /* background-color: #f2f5fa; */
    background-image: url("assets/images/set_of_check_marks_multiple_colours.jpeg");
    background-size: cover;
    background-repeat: no-repeat;
    color: #333;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100%;
}

h1,
h3 {
    color: #3498db;
    text-align: center;
}

#app-container {
    border: 2px solid #3498db;
    border-radius: 10px;
    padding: 10px;
    margin-bottom: 20px;
    margin-top: 20px;
    height: fit-content;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        width: 50%;
        background-color: #f2f5fa;
}

#Title {
    text-align: center;
}

#greeting-message {
    text-align: center;
}

#padding {
    height: auto;
    padding-bottom: 150px;
}

#intro-text {
    display: block;
        text-align: center;
        justify-content: center;
        font-size: large;
}

.todo-container {
    display: block;
    text-align: center;
    justify-content: center;
    width: 40%;
    margin-left: auto;
    margin-right: auto;
}

input[type="text"] {
    padding: 10px;
    margin-right: 5px;
    border: 1px solid #3498db;
    width: 60%;
    text-align: center;
    justify-content: center;
    
}

button {
    padding: 10px 20px;
    background-color: #3498db;
    color: #fff;
    border: none;
    cursor: pointer;
    margin-left: 15px;
}

button:hover {
    background-color: #2980b9;
}

ul {
    list-style-type: none;
    padding: 0;
    text-align: center;
    justify-content: center;
}

li {
    background-color: #fff;
    padding: 10px;
    margin: 5px 0;
    border-radius: 5px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    text-align: center;
    justify-content: center;
}

#motivational-message {
    margin-top: 20px;
    padding: 15px;
    /* background-color: #3498db; */
    color: rgb(175, 0, 0);
    text-align: center;
    border-radius: 5px;
    font-weight: bold;
    font-size: x-large;
}

#motivational-message p {
    margin: 0;
}

/* footer {    
    background-color: #3498db;
    width: 100%;
    text-align: center;
    color: #fff;
    font-weight: bold;
    margin-top: auto;
} */
#footer-list {
        background-color: #3498db;
        text-align: center;
        padding-top: 1rem;
        padding-bottom: 1rem;
        display: flex;
        justify-content: space-evenly;
        list-style-type: none;
        bottom: 0;
        left: 0;
        width: 100%;
        position: absolute;
}

.footer-items {
    background-color: #3498db;
    color: #fff;
}

/* Media Queries */
@media only screen and (max-width: 600px) {
    input[type="text"] {
        width: 100%;
        /* Full width on mobile */
    }
}

@media only screen and (min-width: 601px) {
    .todo-container {
        max-width: 600px;
        /* Limit width on larger screens */
    }
}

